[package]
name = "logprobe"
version = "0.1.0"
authors = ["Fumiya Fujinaka <uzuna.kf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
rmp = "0.8.10"
rmp-serde = "0.15.4"
serde = "1.0.123"
serde_derive = "1.0.123"